--- a/SmartMemeSearch/Views/MainPage.xaml
+++ b/SmartMemeSearch/Views/MainPage.xaml
@@ -1,5 +1,6 @@
 <Page
     x:Class="SmartMemeSearch.Views.MainPage"
+    xmlns:model="using:SmartMemeSearch"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:SmartMemeSearch.ViewModels">
@@ -32,20 +33,17 @@
                   ItemsSource="{Binding Results}"
                   Margin="0,20,0,0">
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="vm:SearchResult">
+                <DataTemplate x:DataType="model:SearchResult">
+
                     <StackPanel Margin="4">
-                        <TextBlock Text="{x:Bind FilePath}"
-                                   FontSize="14"/>
-                        <TextBlock Text="{Binding Score, StringFormat='Score: {0:F3}'}"
-                                   Foreground="Gray"
-                                   FontSize="12"/>
-                        <TextBlock Text="{Binding OcrPreview}"
-                                   TextWrapping="Wrap"
-                                   FontSize="12"
-                                   Foreground="#666"/>
+                        <TextBlock Text="{x:Bind FilePath}" FontSize="14"/>
+                        <TextBlock Text="{x:Bind Score}" FontSize="12" Foreground="Gray"/>
+                        <TextBlock Text="{x:Bind OcrPreview}" TextWrapping="Wrap" FontSize="12"/>
                     </StackPanel>
+
                 </DataTemplate>
             </ListView.ItemTemplate>
+
         </ListView>
 
     </Grid>
