--- a/SmartMemeSearch/Views/MainPage.xaml
+++ b/SmartMemeSearch/Views/MainPage.xaml
@@ -1,9 +1,15 @@
 <Page
     x:Class="SmartMemeSearch.Views.MainPage"
     xmlns:model="using:SmartMemeSearch"
+    xmlns:conv="using:SmartMemeSearch.Converters"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:SmartMemeSearch.ViewModels">
+
+    <Page.Resources>
+        <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conv:BoolToIndeterminateConverter x:Key="BoolToIndeterminateConverter"/>
+    </Page.Resources>
 
     <Page.DataContext>
         <vm:MainViewModel />
@@ -27,6 +33,21 @@
             <Button Content="Import Folder"
                     Command="{Binding ImportCommand}"/>
         </StackPanel>
+        <StackPanel Grid.Row="1" Margin="0,10,0,0">
+            <ProgressBar Minimum="0" 
+                 Maximum="1" 
+                 Value="{Binding ProgressValue}" 
+                 IsIndeterminate="{Binding IsImporting, Converter={StaticResource BoolToIndeterminateConverter}}"/>
+
+            <TextBlock Text="{Binding CurrentFile}"
+               FontSize="12"
+               Foreground="Gray"
+               TextWrapping="Wrap"/>
+
+            <TextBlock Text="Importing..."
+               Visibility="{Binding IsImporting, Converter={StaticResource BoolToVisibilityConverter}}"
+               Foreground="DarkOrange"/>
+        </StackPanel>
 
         <!-- Results -->
         <ListView Grid.Row="2"
@@ -34,14 +55,30 @@
                   Margin="0,20,0,0">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="model:SearchResult">
+                    <StackPanel Orientation="Horizontal" Spacing="12" Margin="4">
 
-                    <StackPanel Margin="4">
-                        <TextBlock Text="{x:Bind FilePath}" FontSize="14"/>
-                        <TextBlock Text="{x:Bind Score}" FontSize="12" Foreground="Gray"/>
-                        <TextBlock Text="{x:Bind OcrPreview}" TextWrapping="Wrap" FontSize="12"/>
+                        <!-- Thumbnail -->
+                        <Image Source="{x:Bind Thumbnail}" 
+               Width="64" Height="64"
+               Stretch="UniformToFill"
+               Margin="0,0,8,0"/>
+
+                        <StackPanel>
+                            <TextBlock Text="{x:Bind FilePath}" FontSize="14"/>
+                            <TextBlock Text="{x:Bind Score}" FontSize="12" Foreground="Gray"/>
+                            <TextBlock Text="{x:Bind OcrPreview}"
+                       TextWrapping="Wrap"
+                       FontSize="12"
+                       Foreground="#666"/>
+
+                            <Button Content="Copy Image"
+                    HorizontalAlignment="Left"
+                    Click="CopyImage_Click"/>
+                        </StackPanel>
+
                     </StackPanel>
-
                 </DataTemplate>
+
             </ListView.ItemTemplate>
 
         </ListView>
