--- a/SmartMemeSearch/Views/MainPage.xaml
+++ b/SmartMemeSearch/Views/MainPage.xaml
@@ -26,10 +26,8 @@
         <!-- Search box -->
         <StackPanel Orientation="Horizontal" Spacing="8">
             <TextBox Width="400"
-                     PlaceholderText="Search memes..."
-                     Text="{Binding Query, Mode=TwoWay}"/>
-            <Button Content="Search"
-                    Command="{Binding SearchCommand}"/>
+            PlaceholderText="Search memes..."
+            Text="{Binding Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Button Content="Import Folder"
                     Command="{Binding ImportCommand}"/>
