key shortcuts open/copy

--- a/SmartMemeSearch/Views/MainPage.xaml
+++ b/SmartMemeSearch/Views/MainPage.xaml
@@ -61,7 +61,25 @@
           Margin="0,20,0,0"
           x:Name="ResultsList">
 
-            <ListView.ItemContainerStyle>
+            <ListView.KeyboardAccelerators>
+
+                    <!-- Enter = Open -->
+                    <KeyboardAccelerator Key="Enter"
+                             Invoked="Open_KA_Invoked"/>
+
+                    <!-- Ctrl+C = Copy image -->
+                    <KeyboardAccelerator Key="C"
+                             Modifiers="Control"
+                             Invoked="CopyImage_KA_Invoked"/>
+
+                    <!-- OPTIONAL: Ctrl+Shift+C = Copy file path -->
+                    <KeyboardAccelerator Key="C"
+                             Modifiers="Control,Shift"
+                             Invoked="CopyPath_KA_Invoked"/>
+
+                </ListView.KeyboardAccelerators>
+                
+                <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
 
