--- a/SmartMemeSearch/Views/MainPage.xaml
+++ b/SmartMemeSearch/Views/MainPage.xaml
@@ -10,6 +10,7 @@
     <Page.Resources>
         <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <conv:BoolToIndeterminateConverter x:Key="BoolToIndeterminateConverter"/>
+        <conv:BoolToVisibilityInverseConverter x:Key="BoolToVisibilityInverseConverter"/>
         <MenuFlyout x:Key="MemeFlyout">
             <MenuFlyoutItem Text="Open" Click="OpenItem_Click"/>
             <MenuFlyoutItem Text="Copy image" Click="CopyImageMenu_Click"/>
@@ -28,6 +29,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Search box -->
@@ -50,6 +52,11 @@
 
             <Button Content="Manage Meme Folders"
                 Command="{Binding ManageFoldersCommand}"/>
+
+            <Button Content="Remove ads"
+                Command="{Binding RemoveAdsCommand}"
+                Margin="10,0,0,0"
+                Visibility="{Binding IsPremium, Converter={StaticResource BoolToVisibilityInverseConverter}}"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Margin="0,10,0,0">
             <ProgressBar Minimum="0" 
@@ -71,6 +78,7 @@
         <ListView Grid.Row="2"
           ItemsSource="{Binding Results}"
           Margin="0,20,0,0"
+          Padding="0,0,0,100"
           x:Name="ResultsList">
 
             <ListView.KeyboardAccelerators>
@@ -170,6 +178,23 @@
             </ListView.ItemTemplate>
 
         </ListView>
+
+        <Border Grid.Row="3"
+        BorderBrush="#33000000"
+        BorderThickness="1"
+        Margin="0,6,0,0"
+        CornerRadius="6"
+        Padding="0,4,0,0"
+        Visibility="{Binding IsPremium, Converter={StaticResource BoolToVisibilityInverseConverter}}">
+
+            <WebView2 x:Name="AdsView"
+              HorizontalAlignment="Stretch"
+              VerticalAlignment="Top"
+              Height="80"
+              DefaultBackgroundColor="Transparent"/>
+        </Border>
+
+
 
     </Grid>
 </Page>
