--- a/SmartMemeSearch.Wpf/MainWindow.xaml
+++ b/SmartMemeSearch.Wpf/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:SmartMemeSearch.Wpf.ViewModels"
         xmlns:conv="clr-namespace:SmartMemeSearch.Wpf.Converters"
-        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2"
+        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         Title="Smart Meme Search"
         Width="1200"
         Height="800"
@@ -39,6 +39,9 @@
             <Button Content="Manage Meme Folders"
                     Width="80"
                     Click="ManageFolders_Click"/>
+            <Button Content="Remove Adds"
+                    Width="80"
+                    Click="RemoveAdds_Click"/>
         </StackPanel>
 
         <!-- Main content -->
